; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_taskdialog.c_taskdialog_notify.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_taskdialog.c_taskdialog_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.taskdialog_info = type { i32, i32, i32 (i32, i32, i32, i32, i32)* }

@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.taskdialog_info*, i32, i32, i32)* @taskdialog_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @taskdialog_notify(%struct.taskdialog_info* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.taskdialog_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.taskdialog_info* %0, %struct.taskdialog_info** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.taskdialog_info*, %struct.taskdialog_info** %5, align 8
  %10 = getelementptr inbounds %struct.taskdialog_info, %struct.taskdialog_info* %9, i32 0, i32 2
  %11 = load i32 (i32, i32, i32, i32, i32)*, i32 (i32, i32, i32, i32, i32)** %10, align 8
  %12 = icmp ne i32 (i32, i32, i32, i32, i32)* %11, null
  br i1 %12, label %13, label %27

13:                                               ; preds = %4
  %14 = load %struct.taskdialog_info*, %struct.taskdialog_info** %5, align 8
  %15 = getelementptr inbounds %struct.taskdialog_info, %struct.taskdialog_info* %14, i32 0, i32 2
  %16 = load i32 (i32, i32, i32, i32, i32)*, i32 (i32, i32, i32, i32, i32)** %15, align 8
  %17 = load %struct.taskdialog_info*, %struct.taskdialog_info** %5, align 8
  %18 = getelementptr inbounds %struct.taskdialog_info, %struct.taskdialog_info* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %8, align 4
  %23 = load %struct.taskdialog_info*, %struct.taskdialog_info** %5, align 8
  %24 = getelementptr inbounds %struct.taskdialog_info, %struct.taskdialog_info* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 %16(i32 %19, i32 %20, i32 %21, i32 %22, i32 %25)
  br label %29

27:                                               ; preds = %4
  %28 = load i32, i32* @S_OK, align 4
  br label %29

29:                                               ; preds = %27, %13
  %30 = phi i32 [ %26, %13 ], [ %28, %27 ]
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
